# TrainingSample

./: .pre-commit-config.yaml  .rustfmt.toml  BENCHMARKS.md  Cargo.toml  README.md  clippy.toml  pyproject.toml  setup-env.sh
.cargo/: config.toml
.github/workflows/: ci-docker.yml  ci.yml  competitive-benchmarks.yml  publish.yml
docs/: API_COMPAT_CV2.md  BUILDING_STATIC_OPENCV.md
scripts/: build-opencv-static.sh  repair-wheel.sh  run_competitive_benchmarks.sh
src/: core.rs  cropping.rs  cv_batch_ops.rs  cv_batch_ops_optimized.rs  cv_compat.rs  lib.rs  luminance.rs  luminance_simd.rs  luminance_x86_optimized.rs  opencv_ops.rs  python_bindings.rs  resize.rs  resize_cache_optimized.rs  resize_ipp_inspired.rs  resize_metal.rs  resize_multicore.rs  resize_neon_optimized.rs  resize_optimized.rs  resize_simd.rs  resize_simd_advanced.rs  resize_x86_optimized.rs  tests.rs  true_batch_ops.rs
tests/: comprehensive_tests.rs  test_competitive_benchmarks.py  test_competitive_optimized_benchmarks.rs  test_optimization_comparison.rs  test_performance_benchmarks.py  test_python_bindings.py  test_x86_optimizations.py
