[package]
name = "trainingsample"
version = "0.1.0"
edition = "2021"
authors = ["bghira <bghira@users.noreply.github.com>"]
description = "High-performance Rust reimplementation of GIL-blocking video/image operations"
license = "MIT"

[lib]
name = "trainingsample"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
imageproc = "0.25"
ndarray = "0.16"
rayon = "1.8"
anyhow = "1.0"
fastrand = "2.0"
ffmpeg-next = { version = "7.0", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[features]
default = ["video"]
python-bindings = ["pyo3", "numpy"]
video = ["ffmpeg-next"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

